--- a/package.json
+++ b/package.json
@@ -9,21 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
-    "@supabase/supabase-js": "2.39.0",
-    "immer": "^11.1.3",
-    "jszip": "3.10.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "zustand": "^5.0.9"
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "2.39.0",
+    "jszip": "3.10.1",
+    "zustand": "^5.0.9",
+    "immer": "^11.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
