--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.1.0",
     "@supabase/supabase-js": "2.39.0",
     "jszip": "3.10.1",
     "zustand": "^5.0.9",
