--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "@google/generative-ai": "^0.1.0",
+    "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "2.39.0",
     "jszip": "3.10.1",
     "zustand": "^5.0.9",
-    "immer": "^11.1.3"
+    "immer": "^11.1.3",
+    "lucide-react": "^0.474.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
